crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_const.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Const": [
          {
            "name": "A",
            "value": {
              "kind": {
                "Int": 0
              },
              "span": {
                "start": 17,
                "end": 18
              }
            },
            "span": {
              "start": 13,
              "end": 18
            }
          },
          {
            "name": "B",
            "value": {
              "kind": {
                "Float": 1.0
              },
              "span": {
                "start": 24,
                "end": 27
              }
            },
            "span": {
              "start": 20,
              "end": 27
            }
          },
          {
            "name": "C",
            "value": {
              "kind": {
                "String": "A"
              },
              "span": {
                "start": 33,
                "end": 36
              }
            },
            "span": {
              "start": 29,
              "end": 36
            }
          },
          {
            "name": "D",
            "value": {
              "kind": {
                "Identifier": "E"
              },
              "span": {
                "start": 42,
                "end": 43
              }
            },
            "span": {
              "start": 38,
              "end": 43
            }
          }
        ]
      },
      "span": {
        "start": 7,
        "end": 46
      }
    },
    {
      "kind": {
        "Const": [
          {
            "name": "WithOneAttribute",
            "value": {
              "kind": {
                "Int": 1
              },
              "span": {
                "start": 82,
                "end": 83
              }
            },
            "span": {
              "start": 63,
              "end": 83
            }
          }
        ]
      },
      "span": {
        "start": 57,
        "end": 86
      }
    },
    {
      "kind": {
        "Const": [
          {
            "name": "WithUngroupedAttriutes",
            "value": {
              "kind": {
                "Int": 2
              },
              "span": {
                "start": 136,
                "end": 137
              }
            },
            "span": {
              "start": 111,
              "end": 137
            }
          }
        ]
      },
      "span": {
        "start": 105,
        "end": 140
      }
    },
    {
      "kind": {
        "Const": [
          {
            "name": "WithGroupAttributes",
            "value": {
              "kind": {
                "Int": 3
              },
              "span": {
                "start": 185,
                "end": 186
              }
            },
            "span": {
              "start": 163,
              "end": 186
            }
          }
        ]
      },
      "span": {
        "start": 157,
        "end": 189
      }
    },
    {
      "kind": {
        "Const": [
          {
            "name": "ThisIsInvalid",
            "value": {
              "kind": {
                "Int": 4
              },
              "span": {
                "start": 222,
                "end": 223
              }
            },
            "span": {
              "start": 206,
              "end": 223
            }
          },
          {
            "name": "AttributesOnMultipleConstants",
            "value": {
              "kind": {
                "Int": 5
              },
              "span": {
                "start": 261,
                "end": 262
              }
            },
            "span": {
              "start": 229,
              "end": 262
            }
          }
        ]
      },
      "span": {
        "start": 200,
        "end": 263
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 263
  }
}
